--- a/my-work.html
+++ b/my-work.html
@@ -35,6 +35,25 @@
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
         <div id="contents"></div>
       </div>
+      <h2>Vanilla JavaScript Calculator</h2>
+      <div id="calcualtor">
+        <div id="results"></div>
+        <button type="button">1</button>
+        <button type="button">2</button>
+        <button type="button">3</button>
+        <button type="button">4</button>
+        <button type="button">5</button>
+        <button type="button">6</button>
+        <button type="button">7</button>
+        <button type="button">8</button>
+        <button type="button">9</button>
+        <button type="button">&#43;</button>
+        <button type="button">&#8722;</button>
+        <button type="button">&#215;</button>
+        <button type="button">&#247;</button>
+        <button type="button">&#60;</button>
+        <button type="button">C</button>
+      </div>
 </p>
     </main>
     <footer>
