--- a/my-work.html
+++ b/my-work.html
@@ -38,21 +38,31 @@
       <h2>Vanilla JavaScript Calculator</h2>
       <div id="calculator">
         <div id="results"></div>
+        <div style="display: flex">
         <button type="button">1</button>
         <button type="button">2</button>
         <button type="button">3</button>
+        </div>
+        <div style="display: flex">
         <button type="button">4</button>
         <button type="button">5</button>
         <button type="button">6</button>
+        </div>
+        <div style="display: flex">
         <button type="button">7</button>
         <button type="button">8</button>
         <button type="button">9</button>
+        </div>
+        <div style="display: flex">
         <button type="button">&#43;</button>
         <button type="button">&#8722;</button>
         <button type="button">&#215;</button>
+        </div>
+        <div style="display: flex">
         <button type="button">&#247;</button>
         <button type="button">&#60;</button>
         <button type="button">C</button>
+        </div>
       </div>
 </p>
     </main>
