--- a/my-work.html
+++ b/my-work.html
@@ -54,12 +54,12 @@
         <button type="button">9</button>
         </div>
         <div style="display: flex">
-        <button type="button">&#43;</button>
-        <button type="button">&#8722;</button>
-        <button type="button">&#215;</button>
+        <button type="button"><span>&#43;</span></button>
+        <button type="button"><span>&#8722;</span></button>
+        <button type="button"><span>&#215;</span></button>
         </div>
         <div style="display: flex">
-        <button type="button">&#247;</button>
+        <button type="button"><span>&#247;</span></button>
         <button type="button">&#60;</button>
         <button type="button">C</button>
         </div>
