--- a/my-work.html
+++ b/my-work.html
@@ -39,27 +39,27 @@
       <div id="calculator">
         <div id="results"></div>
         <div style="display: flex">
-        <button type="button">1</button>
-        <button type="button">2</button>
-        <button type="button">3</button>
+        <button type="button"><span class="number">1</span></button>
+        <button type="button"><span class="number">2</span></button>
+        <button type="button"><span class="number">3</span></button>
         </div>
         <div style="display: flex">
-        <button type="button">4</button>
-        <button type="button">5</button>
-        <button type="button">6</button>
+        <button type="button"><span class="number">4</span></button>
+        <button type="button"><span class="number">5</span></button>
+        <button type="button"><span class="number">6</span></button>
         </div>
         <div style="display: flex">
-        <button type="button">7</button>
-        <button type="button">8</button>
-        <button type="button">9</button>
+        <button type="button"><span class="number">7</span></button>
+        <button type="button"><span class="number">8</span></button>
+        <button type="button"><span class="number">9</span></button>
         </div>
         <div style="display: flex">
-        <button type="button"><span>&#43;</span></button>
-        <button type="button"><span>&#8722;</span></button>
-        <button type="button"><span>&#215;</span></button>
+        <button type="button"><span class="doMath">&#43;</span></button>
+        <button type="button"><span class="doMath">&#8722;</span></button>
+        <button type="button"><span class="doMath">&#215;</span></button>
         </div>
         <div style="display: flex">
-        <button type="button"><span>&#247;</span></button>
+        <button type="button"><span class="doMath">&#247;</span></button>
         <button type="button">&#60;</button>
         <button type="button">C</button>
         </div>
