--- a/my-work.html
+++ b/my-work.html
@@ -54,12 +54,12 @@
         <button type="button">9</button>
         </div>
         <div style="display: flex">
-        <button type="button"><span class="add">&#43;</span></button>
-        <button type="button"><span class="subtract">&#8722;</span></button>
-        <button type="button"><span class="multiply">&#215;</span></button>
+        <button type="button">+</button>
+        <button type="button">-</button>
+        <button type="button">*</button>
         </div>
         <div style="display: flex">
-        <button type="button"><span class="divide">&#247;</span></button>
+        <button type="button">/</button>
         <button type="button">&#60;</button>
         <button type="button">C</button>
         </div>
