--- a/my-work.html
+++ b/my-work.html
@@ -39,27 +39,27 @@
       <div id="calculator">
         <div id="results"></div>
         <div style="display: flex">
-        <button type="button">1</button>
-        <button type="button">2</button>
-        <button type="button">3</button>
+        <button type="button" class="num">1</button>
+        <button type="button" class="num">2</button>
+        <button type="button" class="num">3</button>
         </div>
         <div style="display: flex">
-        <button type="button">4</button>
-        <button type="button">5</button>
-        <button type="button">6</button>
+        <button type="button" class="num">4</button>
+        <button type="button" class="num">5</button>
+        <button type="button" class="num">6</button>
         </div>
         <div style="display: flex">
-        <button type="button">7</button>
-        <button type="button">8</button>
-        <button type="button">9</button>
+        <button type="button" class="num">7</button>
+        <button type="button" class="num">8</button>
+        <button type="button" class="num">9</button>
         </div>
         <div style="display: flex">
-        <button type="button">+</button>
-        <button type="button">-</button>
-        <button type="button">*</button>
+        <button type="button" class="add">+</button>
+        <button type="button" class="subtract">-</button>
+        <button type="button" class="multiply">*</button>
         </div>
         <div style="display: flex">
-        <button type="button">/</button>
+        <button type="button" class="divide">/</button>
         <button type="button">&#60;</button>
         <button type="button">C</button>
         </div>
