--- a/my-work.html
+++ b/my-work.html
@@ -35,6 +35,12 @@
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
         <div id="contents"></div>
       </div>
+  <h2>Vanilla JavaScript To-Do List</h2>
+      <div id="slideshow">
+        <div class="slide">Slide 1</div>
+        <div class="slide">Slide 2</div>
+        <div class="slide">Slide 3</div>
+      </div>
 </p>
     </main>
     <footer>
