--- a/my-work.html
+++ b/my-work.html
@@ -35,7 +35,7 @@
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
         <div id="contents"></div>
       </div>
-  <h2>Vanilla JavaScript To-Do List</h2>
+  <h2>Vanilla JavaScript Slideshow</h2>
       <div id="slideshow">
         <div class="slide">Slide 1</div>
         <div class="slide">Slide 2</div>
