--- a/my-work.html
+++ b/my-work.html
@@ -37,7 +37,7 @@
       </div>
   <h2>Vanilla JavaScript Slideshow</h2>
       <div id="slideshow">
-        <div class="slide" style="display: block">Slide 1</div>
+        <div class="slide" style="visibility: visible">Slide 1</div>
         <div class="slide">Slide 2</div>
         <div class="slide">Slide 3</div>
       </div>
@@ -48,6 +48,5 @@
       &copy; Copyright Cory Roberts, 2022
     </footer>
 <script src="to_do.js"></script>
-<script src="calculator.js"></script>
   </body>
 </html>
