--- a/my-work.html
+++ b/my-work.html
@@ -37,9 +37,11 @@
       </div>
   <h2>Vanilla JavaScript Slideshow</h2>
       <div id="slideshow">
+        <span id="previous"><</span>
         <div class="slide" style="visibility: visible">Slide 1</div>
         <div class="slide">Slide 2</div>
         <div class="slide">Slide 3</div>
+          <span id="next">></span>
       </div>
 </p>
     </main>
