--- a/my-work.html
+++ b/my-work.html
@@ -49,6 +49,7 @@
       &raquo; <a href="index.html">Back Home</a> <br>
       &copy; Copyright Cory Roberts, 2022
     </footer>
-<script src="to_do.js"></script>
+    <script src="to_do.js"></script>
+    <script src="slideshow.js"></script>
   </body>
 </html>
