--- a/my-work.html
+++ b/my-work.html
@@ -35,6 +35,8 @@
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
         <div id="contents"></div>
       </div>
+  <h2>Vanilla JavaScript Pop-Outs</h2>
+      <div id="pop-outs"><a href="javascript: void(0)">Pop-Out 1</a> - <a href="javascript: void(0)">Pop-Out 2</a> - <a href="javascript: void(0)">Pop-Out 3</a></div>
 </p>
     </main>
     <footer>
