--- a/my-work.html
+++ b/my-work.html
@@ -44,6 +44,6 @@
       &copy; Copyright Cory Roberts, 2022
     </footer>
     <script src="to_do.js"></script>
-    <script src="slideshow.js"></script>
+    <script src="pop_outs.js"></script>
   </body>
 </html>
