--- a/my-work.html
+++ b/my-work.html
@@ -45,5 +45,6 @@
     </footer>
     <script src="to_do.js"></script>
     <script src="pop_outs.js"></script>
+  <div class="popouts"></div>
   </body>
 </html>
