--- a/my-work.html
+++ b/my-work.html
@@ -37,6 +37,13 @@
       </div>
   <h2>Vanilla JavaScript Pop-Outs</h2>
       <div id="pop-outs"><a href="javascript: void(0)">Pop-Out 1</a> - <a href="javascript: void(0)">Pop-Out 2</a> - <a href="javascript: void(0)">Pop-Out 3</a></div>
+  <h2>Vanilla JavaScript Pop-Outs</h2>
+      <div id="timer">
+        <input type="button" name="start" value="Start Timer">
+        <input type="button" name="stop" value="Stop Timer">
+        <input type="button" name="restart" value="Restart Timer">
+        <span id="results"></span>
+      </div> 
 </p>
     </main>
     <footer>
@@ -45,5 +52,6 @@
     </footer>
     <script src="to_do.js"></script>
     <script src="pop_outs.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
