--- a/my-work.html
+++ b/my-work.html
@@ -37,7 +37,7 @@
       </div>
   <h2>Vanilla JavaScript Pop-Outs</h2>
       <div id="pop-outs"><a href="javascript: void(0)">Pop-Out 1</a> - <a href="javascript: void(0)">Pop-Out 2</a> - <a href="javascript: void(0)">Pop-Out 3</a></div>
-  <h2>Vanilla JavaScript Pop-Outs</h2>
+  <h2>Vanilla JavaScript Timer</h2>
       <div id="timer">
         <input type="button" name="start" value="Start Timer">
         <input type="button" name="stop" value="Stop Timer">
