--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   I've been working in the food and retail industry all of my life and I'm looking for a change in career path.
 </p>
 <p>
-  I have two siblings, a brother and a siser. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
+  I have two siblings, a brother and a sister. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
 </p>
 <p>
   I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all of my life. I graduated from Weatherford High School in 2009.
