--- a/index.html
+++ b/index.html
@@ -1,51 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cory Roberts Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <header id="main_header">
-      <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
-      <h1 style="display: inline">Cory Roberts Portfolio</h1>
-    </header>
-<main>
-<p>
-  Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink), offering support and coding assistance/resources for a very long time. I'm wanting to pursue an actual career in web development.
-</p>
-<hr>
-<h2>About Me</h2>
-<p>
-  I've been working in the food and retail industry all of my life and I'm looking for a change in career path.
-</p>
-<p>
-  I have two siblings, a brother and a sister. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
-</p>
-<p>
-  I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all of my life. I graduated from Weatherford High School in 2009.
-</p>
-<p>
-  As a child, I admired construction vehicles and dreamed to become a construction worker when I grew up. As a teen, I started getting involved with the internet and coding and admired and started having a passion for what I did.
-</p>
-<h2>My Hobbies</h2>
-<ul>
-  <li>Coding</li>
-  <li>Yu-Gi-Oh TCG</li>
-  <li>Hard Rock & Metal</li>
-  <li>Statuettes</li>
-  <li>Fantasy Media</li>
-  <li>Pokemon GO</li>
-  <li>Call of Duty</li>
-</ul>
-<h2>Links</h2>
-<ul>
-  <li><a href="resume.html">Resume</a></li>
-    <li><a href="my-work.html">My Work</a></li>
-  <li><a href="https://jcodes.jcink.net/" target="_blank">jCodes</a> - My Personal Message Board</li>
-</ul>
-</main>
-<footer>
-  &copy; Copyright Cory Roberts, 2022</footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Junior Web Developer Network</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a href="#HTML"><button type="button" class="btn btn-default navbar-btn">HTML</button></a>
+        <a href="#CSS"><button type="button" class="btn btn-default navbar-btn">CSS</button></a>
+        <a href="#Bootstrap"><button type="button" class="btn btn-default navbar-btn">Bootstrap</button></a>
+        <a href="#JavaScript"><button type="button" class="btn btn-default navbar-btn">JavaScript</button></a>
+        <a href="#jQuery"><button type="button" class="btn btn-default navbar-btn">jQuery</button></a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Navigation <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Forum</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <ol class="breadcrumb">
+  <li><a href="index.html" class="active">Home</a></li>
+</ol>
+  <div class="jumbotron">
+    <h1>Junior Web Developer Network</h1>
+    <p>Junior Web Developer Network is where users come to get support on the topics of coding that get you started in web development.</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
+    <div id="HTML" class="panel panel-primary">
+  <div class="panel-heading">HTML</div>
+  <div class="panel-body">
+    The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript. <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">More...</a>
+  </div>
+  </div>
+  <div id="CSS" class="panel panel-primary">
+<div class="panel-heading">CSS</div>
+<div class="panel-body">
+  Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">More...</a>
+</div>
+</div>
+<div id="Bootstrap" class="panel panel-primary">
+<div class="panel-heading">Bootstrap</div>
+<div class="panel-body">
+Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains HTML, CSS and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components. <a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">More...</a>
+</div>
+</div>
+<div id="JavaScript" class="panel panel-primary">
+<div class="panel-heading">JavaScript</div>
+<div class="panel-body">
+JavaScript, often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use JavaScript on the client side for web page behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users' devices. <a href="https://en.wikipedia.org/wiki/JavaScripthttps://en.wikipedia.org/wiki/JavaScript" target="_blank">More...</a>
+</div>
+</div>
+<div id="jQuery" class="panel panel-primary">
+<div class="panel-heading">jQuery</div>
+<div class="panel-body">
+jQuery is a JavaScript library designed to simplify HTML DOM tree traversal and manipulation, as well as event handling, CSS animation, and Ajax. It is free, open-source software using the permissive MIT License. As of May 2019, jQuery is used by 73% of the 10 million most popular websites. Web analysis indicates that it is the most widely deployed JavaScript library by a large margin, having at least 3 to 4 times more usage than any other JavaScript library. <a href="https://en.wikipedia.org/wiki/JQuery" target="_blank">More...</a>
+</div>
+</div>
+<div id="copyright">
+  &copy; Copyright Cory Roberts, 2022
+  </div>
+</div>
+</body>
 </html>
