--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Navigation <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="#">Forum</a></li>
           </ul>
         </li>
@@ -31,7 +31,7 @@
     </div>
   </nav>
   <ol class="breadcrumb">
-  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="home.html" class="active">Home</a></li>
 </ol>
   <div class="jumbotron">
     <h1>Junior Web Developer Network</h1>
