--- a/index.html
+++ b/index.html
@@ -1,55 +1,78 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cory Roberts Portfolio</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+<head>
+  <meta charset="utf-8">
+  <title>Cory Roberts Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <header id="main_header">
-      <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
-      <h1 style="display: inline">Cory Roberts Portfolio</h1>
-    </header>
-<main>
-<p>
-  Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink), offering support and coding assistance/resources for a very long time. I'm wanting to pursue an actual career in web development.
-</p>
-<hr>
-<h2>About Me</h2>
-<p>
-  I've been working in the food and retail industry all of my life and I'm looking for a change in career path.
-</p>
-<p>
-  I have two siblings, a brother and a sister. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
-</p>
-<p>
-  I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all of my life. I graduated from Weatherford High School in 2009.
-</p>
-<p>
-  As a child, I admired construction vehicles and dreamed to become a construction worker when I grew up. As a teen, I started getting involved with the internet and coding and admired and started having a passion for what I did.
-</p>
-<h2>My Hobbies</h2>
-<ul>
-  <li>Coding</li>
-  <li>Yu-Gi-Oh TCG</li>
-  <li>Hard Rock & Metal</li>
-  <li>Statuettes</li>
-  <li>Fantasy Media</li>
-  <li>Pokemon GO</li>
-  <li>Call of Duty</li>
-</ul>
-<h2>Links</h2>
-<ul>
-  <li><a href="resume.html">Resume</a></li>
-    <li><a href="my-work.html">My Work</a></li>
-  <li><a href="https://jcodes.jcink.net/" target="_blank">jCodes</a> - My Personal Message Board</li>
-</ul>
-</main>
-<footer>
-  &copy; Copyright Cory Roberts, 2022</footer>
-  </body>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="navbar">
+    <div class="navbar-inner">
+      <a class="brand" href="#">Title</a>
+      <ul class="nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="my-work.html">My Work</a></li>
+      </ul>
+    </div>
+  </div>
+  <header id="main_header">
+    <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
+    <h1 style="display: inline">Cory Roberts Portfolio</h1>
+  </header>
+  <main>
+    <p>
+      Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink),
+      offering support and coding assistance/resources for a very long time. I'm wanting to pursue an actual career in web development.
+    </p>
+    <hr>
+    <div class="panel panel-default">
+      <div class="panel-heading">About Me</div>
+      <div class="panel-body">
+        <p>
+          I've been working in the food and retail industry all of my life and I'm looking for a change in career path.
+        </p>
+        <p>
+          I have two siblings, a brother and a sister. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
+        </p>
+        <p>
+          I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all of my life. I graduated from Weatherford High School in 2009.
+        </p>
+        <p>
+          As a child, I admired construction vehicles and dreamed to become a construction worker when I grew up. As a teen, I started getting involved with the internet and coding and admired and started having a passion for what I did.
+        </p>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">My Hobbies</div>
+      <div class="panel-body">
+        <ul>
+          <li>Coding</li>
+          <li>Yu-Gi-Oh TCG</li>
+          <li>Hard Rock & Metal</li>
+          <li>Statuettes</li>
+          <li>Fantasy Media</li>
+          <li>Pokemon GO</li>
+          <li>Call of Duty</li>
+        </ul>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">External Links</div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="https://jcodes.jcink.net/" target="_blank">jCodes</a> - My Personal Message Board</li>
+        </ul>
+      </div>
+    </div>
+  </main>
+  <footer>
+    &copy; Copyright Cory Roberts, 2022</footer>
+</body>
+
 </html>
