--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       offering support and coding assistance/resources for a very long time. I'm wanting to pursue an actual career in web development.
     </p>
     <hr>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">About Me</div>
       <div class="panel-body">
         <p>
@@ -48,7 +48,7 @@
         </p>
       </div>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">My Hobbies</div>
       <div class="panel-body">
         <ul>
@@ -62,7 +62,7 @@
         </ul>
       </div>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">External Links</div>
       <div class="panel-body">
         <ul>
