--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-inner">
-      <a class="brand" href="#">Title</a>
+      <a class="brand" href="#">Cory Roberts Portfolio</a>
       <ul class="nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
@@ -21,10 +21,6 @@
       </ul>
     </div>
   </div>
-  <header id="main_header">
-    <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
-    <h1 style="display: inline">Cory Roberts Portfolio</h1>
-  </header>
   <main>
     <p>
       Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink),
