--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <a class="brand" href="#">Cory Roberts Portfolio</a>
-      <ul class="nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="my-work.html">My Work</a></li>
-      </ul>
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Cory Roberts Portfolio</a>
+      <div class="navbar-header navbar-right">
+        <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
+        <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
+        <a href="my-work.html"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
+      </div>
     </div>
-  </div>
+  </nav>
   <main>
     <p>
       Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink),
