--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Cory Roberts Portfolio</a>
       <div class="navbar-header navbar-right">
-        <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
+        <a href="index.html" class="active"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
         <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
         <a href="my-work.html"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
       </div>
