--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <header>
-      <h1>Cory Roberts</h1>
-    </header>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Cory Roberts Resume</a>
+      <div class="navbar-header navbar-right">
+        <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
+        <a href="resume.html" class="active"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
+        <a href="my-work.html"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
+      </div>
+    </div>
+  </nav>
 <main>
   <strong>Looking to Become a Web Developer</strong> <br>
   Granbury, TX 76049 <br>
