--- a/my-work.html
+++ b/my-work.html
@@ -17,7 +17,7 @@
       <div class="navbar-header navbar-right">
         <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
         <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
-        <a href="my-work.html" class="active"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
+        <a href="my-work.html"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
       </div>
     </div>
   </nav>
@@ -70,7 +70,6 @@
     </div>
   </main>
   <footer>
-    &raquo; <a href="index.html">Back Home</a> <br>
     &copy; Copyright Cory Roberts, 2022
   </footer>
   <script src="to_do.js"></script>
